<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clemson Physical Therapy</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Export to...</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_exercise_view">ExerciseView</string>
    <string name="title_activity_log_view">Exercise Log</string>
    <string name="title_activity_compare_view">CompareView</string>
    <string name="title_activity_user_video_view">UserVideoView</string>
    <string name="title_activity_practitioner_video_view">PractitionerVideoView</string>
    <string name="title_activity_audio_record">Record Audio</string>
    <string name="pref_username">User</string>
    <string name="pref_username_desc">Patient\'s name</string>
    <string name="pref_practitioner">Practitioner</string>
    <string name="pref_practitioner_desc">Practitioner\'s name</string>
    <string name="checkbox">Video Annotation</string>
    <string name="checkbox_desc">Toggle annotation while watching videos</string>
    <string name="pref_title_download_videos">Local Videos</string>
    <string name="pref_description_download_videos">Download and play exercise videos on handheld instead of viewing online.</string>
    <string name="title_activity_info_view">InfoView</string>
    <string name="action_add_annotation">New Annotation</string>
    <string name="action_annotation_list">View All Annotations</string>
    <string name="action_video_list">View All User Videos</string>
    <string name="action_show_log">Show Exercise Log</string>
    <string name="action_compare">Compare to Exercise Video</string>
    <string name="action_record">Record Video</string>
    
    <string name="action_about">Info</string>
    <string name="about_text">file:///android_asset/about.html</string>
    <string name="pdf_text">file:///android_asset/4.Physical Therapy - User Manual.pdf</string>
    <string name="action_delete">Delete</string>
    <string name="action_saveall">Save All</string>
    <string name="action_delete_all_annotations">Delete All Annotations</string>
    <string name="title_audio_player_view">Audio Notes</string>
    <string name="title_activity_exercise_edit_view">Edit Exercise</string>

</resources>
