<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="User Profile" >
        <EditTextPreference 
            	android:title="@string/pref_username" 
            	android:summary="@string/pref_username_desc" 
            	android:key="prefUsername"/>
        
        <EditTextPreference 
            	android:title="@string/pref_practitioner" 
            	android:summary="@string/pref_practitioner_desc" 
            	android:key="prefPractitioner"/>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="App Settings" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefCheckbox"
            android:summary="@string/checkbox_desc"
            android:title="@string/checkbox" >
        </CheckBoxPreference>
    </PreferenceCategory>

</PreferenceScreen>