<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <item
        android:id="@+id/action_add_annotation"
        android:orderInCategory="99"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_add_annotation"/>

     
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/action_share"/>

    <item
        android:id="@+id/action_compare"
        android:orderInCategory="101"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_compare"
        android:title="@string/action_compare"/>
    
    <item
        android:id="@+id/activity_show_log"
        android:orderInCategory="102"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/action_show_log"/>
 
    
    <item
        android:id="@+id/action_delete_all_annotations"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/action_delete_all_annotations"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_settings"/>
     
    <item
        android:id="@+id/action_about"
        android:orderInCategory="105"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/action_about"/>
    

    
    
     
     <!--  Camcorder icon from http://findicons.com/icon/70736/video_camera?id=330029 
     <item
        android:id="@+id/action_record"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_record"
        android:title="@string/action_record"/>
        -->
     
 
</menu>
